# prayer-tui

./: .gitignore  Cargo.toml  README.md  background_log.txt  config.toml  install.sh  prayer-tui.service  uninstall.sh
src/: main.rs
src/app/: config.rs  mod.rs  prayers.rs  state.rs  tui.rs
